# duplex-desk

./: Cargo.toml  README.md
crates/duplex-codec/: Cargo.toml
crates/duplex-codec/examples/: codec_loopback.rs
crates/duplex-codec/src/: lib.rs  platform.rs
crates/duplex-codec/src/platform/: unsupported.rs
crates/duplex-codec/src/platform/macos/: mod.rs
crates/duplex-codec/src/platform/windows/: mod.rs
crates/duplex-input/: Cargo.toml  README.md
crates/duplex-input/src/: error.rs  event.rs  lib.rs  platform.rs
crates/duplex-input/src/platform/: mod.rs  unsupported.rs
crates/duplex-input/src/platform/macos/: mod.rs
crates/duplex-input/src/platform/windows/: mod.rs
crates/duplex-proto/: Cargo.toml  README.md
crates/duplex-proto/src/: control.rs  input.rs  lib.rs  video.rs
crates/duplex-scap/: Cargo.toml  README.md  build.rs
crates/duplex-scap/examples/: capture.rs  encode.rs  host.rs  loopback.rs
crates/duplex-scap/src/: capturer.rs  config.rs  decoder.rs  encoder.rs  errors.rs  frame.rs  lib.rs  platform.rs  types.rs
crates/duplex-scap/src/platform/: unsupported.rs
crates/duplex-scap/src/platform/linux/: mod.rs
crates/duplex-scap/src/platform/macos/: mod.rs  stream_output.rs
crates/duplex-scap/src/platform/macos/decoder/: mod.rs  vt_dec_bindings.rs
crates/duplex-scap/src/platform/macos/encoder/: color_convert.rs  mod.rs  vt_bindings.rs
crates/duplex-scap/src/platform/windows/: mod.rs
crates/duplex-transport/: Cargo.toml  README.md
crates/duplex-transport/examples/: recv.rs  send.rs
crates/duplex-transport/src/: error.rs  lib.rs  packet.rs  receiver.rs  sender.rs  tls.rs
duplex-desk/: Cargo.toml
duplex-desk/src/: app.rs  host_task.rs  lib.rs  main.rs  receiver_task.rs  task_event.rs  time_utils.rs  video_view.rs
src/: app.rs  host_task.rs  lib.rs  receiver_task.rs  task_event.rs
