[package]
name = "duplex-codec"
version = "0.1.0"
edition.workspace = true

[lib]
name = "duplex_codec"
path = "src/lib.rs"

[dependencies]
duplex-scap = { workspace = true }
duplex-proto = { workspace = true }
tracing = { workspace = true }
cfg-if = { workspace = true }

[dev-dependencies]
image = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
] }
