[package]
name = "duplex-input"
version = "0.1.0"
edition.workspace = true

[lib]
name = "duplex_input"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
duplex-proto = { workspace = true }
cfg-if = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }
